# hs-flatris

./: .gitignore  README.md  build.sh  default.nix  flatris.cabal  hs-flatris.nix  result  stack.yaml
src/: Action.hs  Grid.hs  Main.hs  Model.hs  Tetromino.hs  Update.hs  View.hs
static/: index.html
