name:                flatris
version:             0.1.0.0
synopsis:            An implementation of Flatris using Haskell and Miso
category:            Web
build-type:          Simple
license:             BSD3
license-file:        LICENSE
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base,
                       miso,
                       containers,
                       aeson,
                       aeson-pretty,
                       random
  default-language:    Haskell2010
